# aegif

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMAKE_MSVC.bat  CMakeLists.txt  LICENSE  README.md
3rd/AfterEffectsSDK/: README.md
3rd/auxfiles/AfterEffectsSDK/: CMakeLists.txt
3rd/auxfiles/gifski/: CMakeLists.txt
3rd/auxfiles/mpack/: CMakeLists.txt
aegif/: CMakeLists.txt
aegif/resource/options_dialog/: options_dialog.rc  resource.h
aegif/src/: aegif.cpp  aegif_pipl.r  aegp_mem.cpp  aegp_mem.hpp  aegp_mem_lock_guard.cpp  aegp_mem_lock_guard.hpp  aeio.cpp  aeio.hpp  catch_exception.hpp  charenc.cpp  charenc.hpp  charenc_win.cpp  dll_hinstance.cpp  dll_hinstance.hpp  dll_main.cpp  entry_point.cpp  error_guard.hpp  gif_encoder.cpp  gif_encoder.hpp  global_setdown.cpp  global_setdown.hpp  global_setup.cpp  global_setup.hpp  locale.cpp  locale.hpp  log.cpp  log.hpp  options_dialog.cpp  options_dialog.hpp  output_options.cpp  output_options.hpp  scope_guard.hpp  strutil.cpp  version.hpp
aegif/src/ui/: ui_options_dialog_base.cpp  ui_options_dialog_base.hpp  ui_options_dialog_win.cpp  ui_options_dialog_win.hpp
aegif/test/: CMakeLists.txt
aegif/test/src/: output_options_test.cpp
aegif/test/src/frozen/: output_options_v1.cpp  output_options_v1.hpp  output_options_v255.cpp  output_options_v255.hpp
cmake/: add_pipl_rc.cmake
debug_on_ae/: CMakeLists.txt
